# dgt-data-catalog

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
airflow/dags/tests/: conftest.py  test_clue_ingestion_dag.py  test_governance_base_ingestion_dag.py  test_governance_ingestion_dag.py
db/tests/: conftest.py  test_functions.py  test_schema.py  test_seed_data.py  test_views.py
